[gd_scene load_steps=8 format=3 uid="uid://bajpxacq28d50"]

[ext_resource type="Script" uid="uid://c1o85lmvg85oi" path="res://UI/start_menu.gd" id="1_d3352"]
[ext_resource type="Texture2D" uid="uid://c8qbwipy7qepc" path="res://Assets/pixelNoodles.jpg" id="2_35j0k"]
[ext_resource type="Texture2D" uid="uid://cgfvwbw8cnvp7" path="res://Assets/Sprite-0001.png" id="2_iky6m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_35j0k"]
texture = ExtResource("2_iky6m")
texture_margin_left = 16.0
texture_margin_right = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gnao3"]
texture = ExtResource("2_iky6m")
texture_margin_left = 16.0
texture_margin_right = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf0c6"]
texture = ExtResource("2_iky6m")
texture_margin_left = 16.0
texture_margin_right = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bo5hi"]
texture = ExtResource("2_iky6m")
texture_margin_left = 16.0
texture_margin_right = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_d3352")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35j0k")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -52.0
offset_right = 73.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_35j0k")
text = "START"

[node name="LeaderBoard" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_gnao3")
text = "LEADERBOARD"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_rf0c6")
text = "CREDITS"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_bo5hi")
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderBoard" to="." method="_on_leader_board_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
